# leakrfc

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  NOTICE  README.md  VERSION  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: docker.yml  python.yml
docs/: api.md  cache.md  configuration.md  crawl.md  index.md  make.md  quickstart.md  rfc.md
docs/reference/: cli.md
docs/sync/: aleph.md  memorious.md
ftm_datalake/: cli.py  crawl.py  export.py  import.py  logging.py  make.py  model.py  settings.py  util.py  worker.py
ftm_datalake/api/: __init__.py  auth.py  main.py  util.py
ftm_datalake/archive/: __init__.py  base.py  cache.py  dataset.py  documents.py
ftm_datalake/connectors/: aleph.py
ftm_datalake/sync/: aleph.py  aleph_entities.py  memorious.py
leakrfc/: __init__.py  cli.py  crawl.py  export.py  extract.py  logging.py  make.py  model.py  settings.py  util.py  worker.py
leakrfc/api/: main.py  util.py
leakrfc/archive/: __init__.py  base.py  dataset.py  documents.py
leakrfc/connectors/: aleph.py
leakrfc/sync/: aleph.py  aleph_entities.py  memorious.py
tests/: conftest.py  test_api.py  test_archive.py  test_config.py  test_crawl.py  test_export.py  test_make.py  test_model.py  test_sync.py  test_util.py
tests/fixtures/: archive.yml
tests/fixtures/archive/s3_dataset/.leakrfc/: config.yml
tests/fixtures/archive/test_dataset/.leakrfc/: config.yml  documents.csv  index.json  size
